Fix missing GET routes for the import content, fix some typos
